# hi-solve

./: .gitignore  .tmp  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
doc/: Doxyfile.in
docs/: Doxyfile.in  LICENSE  conf.py  conf.py.in  index.rst.in  requirements.txt  requirements.txt.in
examples/: CMakeLists.txt
examples/examples/: example_poly.cpp
include/: fun.h  hi-solve.h
rtd/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  hi-solveConfig.cmake
rtd/docs/: Doxyfile
rtd/examples/: Makefile  cmake_install.cmake
rtd/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: solve.cpp  updateStrategy.cpp
test/: CMakeLists.txt
test/unittests/: ut_hisolve_constr_arguments.cpp  ut_hisolve_constr_default.cpp  ut_hisolve_get.cpp  ut_hisolve_set.cpp  ut_hisolve_solve.cpp
